--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
             color: purple;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-size: 30px;
+            margin: 0;
         }
 
         #proposalp2 {
             color: purple;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-size: 20px;
+            margin: 0;
         }
 
-        #paragraphdiv, #finalframe {
+        #paragraphdiv {
             width: 100%;
             height: 340px;
             background-color: transparent;
@@ -52,11 +54,10 @@
             text-align: center;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-        }
-
-        #paragraphdiv {
+            justify-content: flex-start;
             overflow-y: auto;
+            padding: 10px; /* Add padding for better text visibility */
+            box-sizing: border-box; /* Include padding in total height */
         }
 
         #paragraphdiv::-webkit-scrollbar {
@@ -96,6 +97,7 @@
 
         #finalframe {
             display: none;
+            text-align: center;
         }
 
         @media (max-width: 600px) {
@@ -112,7 +114,7 @@
                 font-size: 18px;
             }
 
-            #paragraphdiv, #finalframe {
+            #paragraphdiv {
                 height: auto;
                 max-height: 300px;
             }
