--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             flex-direction: column;
             justify-content: flex-start;
             overflow-y: auto;
-            padding: 10px; /* Add padding for better text visibility */
-            box-sizing: border-box; /* Include padding in total height */
+            padding: 10px; 
+            box-sizing: border-box; 
         }
 
         #paragraphdiv::-webkit-scrollbar {
@@ -150,7 +150,7 @@
         </div>
         <div id="finalframe">
             <p id="proposalp2">Elizabete Bojaruneca, <br> Will you marry me?</p>
-            <button onclick="window.location.href='https://www.youtube.com/watch?v=E_qy2XYPJBo';" id="nobtn">No</button>
+            <button onclick="window.location.href='https://www.youtube.com/watch?v=b3rNUhDqciM';" id="nobtn">No</button>
             <button onclick="window.location.href='https://www.youtube.com/watch?v=nqJlNCs4qbI';" id="yesbtn">Yes</button>
         </div>
         <button onclick="toggledivs()" id="btn1">Next</button>
